2003-12-09  Jason R. Mastaler  <jason@mastaler.com>

	* Pending.py (Message.initMessage): Remove unnecessary method, and
	move that code into Message.__init__.

	(Message.__init__): New variables x_primary_address and
	append_address.

	(Message.release): Append append_address instead of return_path.
	(Message.delete): Ditto.
	(Message.whitelist): Ditto.
	(Message.blacklist): Ditto.
		
	(Queue.mainLoop): Remove call to Message.initMessage().
	(Message.release): Ditto.
	(Message.delete): Ditto.
	(Message.whitelist): Ditto.
	(Message.blacklist): Ditto.
	
2003-12-03  Jason R. Mastaler  <jason@mastaler.com>

	* AutoResponse.py (AutoResponse.create): Add an RFC 2183
	Content-Disposition = 'inline' header to the main header of the
	message, as well as each of the MIME bodyparts if
	AUTORESPONSE_INCLUDE_SENDER_COPY is a positive value.

	(AutoResponse.create): Add a default charset for get_charsets() to
	fall back to in case the triggering message lacks its own charset
	parameter.

2003-12-03  Tim Legant  <tim@catseye.net>

	* AutoResponse.py (AutoResponse.__init__): Made msgin_as_string a
	member (instead of a local).  It was once a member, then switched
	to a local with the change of 2003-11-11.  Then the change of
	2003-11-16 used it in create, but it wasn't changed back to a
	member.

2003-11-19  Tim Legant  <tim@catseye.net>

	* Errors.py (AddressError, QueueError): In the last change I
	forgot to pass 'self' to the ancestor's __init__ method.  D'oh!
	Pointy-hat to me.

2003-11-16  Tim Legant  <tim@catseye.net>

	* AutoResponse.py (AutoResponse.__init__): Changed to re-parse the
	message only if AUTORESPONSE_INCLUDE_SENDER_COPY is 2 or greater,
	since that's the only case in which it matters.

	* Auth.py (Auth.init_auth_method): Cleaned up exception handling
	so that error messages could actually be read!

	* (Auth.init_remote): Fixed IMAP4_SSL class definition.
	Previously, it was defined as a local variable which just